# work-agent

./: .env.sample  .gitignore  Cargo.toml  README.md  docker-compose.yml  lefthook.yml
.github/workflows/: lint.yaml  test.yaml
db/migration/admin/: U1__create_agent_database.sql  V1__create_agent_database.sql
db/migration/agent/: U3__create_tool_call_approvals.sql  V3__create_tool_call_approvals.sql
db/migrations/agent/: V1__create_chat_tables.sql
docs/: architecture.md  context.md  database.md  deep-research.md  process-flow.md  process.md  sequence.md  tools.md
docs/openapi/: openapi.yaml
src/: application.rs  domain.rs  infrastructure.rs  lib.rs  main.rs  presentation.rs
src/application/: error.rs  usecase.rs
src/application/error/: agent_usecase_error.rs  research_usecase_error.rs  tool_execution_rule_usecase_error.rs
src/application/usecase/: agent_usecase.rs  digest_usecase.rs  research_usecase.rs  survey_usecase.rs  tool_execution_rule_usecase.rs
src/domain/: error.rs  model.rs  port.rs  repository.rs  service.rs
src/domain/error/: agent_error.rs  deep_research_error.rs  message_error.rs  role_error.rs  tool_approval_repository_error.rs  tool_error.rs
src/domain/model/: chat_session.rs  chat_session_event.rs  input_file.rs  input_image.rs  message.rs  role.rs  token_usage.rs  tool.rs  tool_approval.rs  tool_call.rs  tool_execution_decision.rs  tool_execution_policy.rs
src/domain/port/: llm_provider.rs  search_provider.rs  tool.rs
src/domain/repository/: tool_approval_repository.rs
src/domain/service/: agent_service.rs  compaction_service.rs  context_service.rs  deep_research_service.rs  event_service.rs  tool_service.rs
src/infrastructure/: llm.rs  persistence.rs  search.rs  tool.rs  util.rs
src/infrastructure/llm/: bedrock_llm_provider.rs
src/infrastructure/persistence/: postgres_chat_message_repository.rs  postgres_chat_session_repository.rs  postgres_tool_approval_repository.rs
src/infrastructure/search/: tavily_search_provider.rs
src/infrastructure/tool/: asr_tool.rs  file_edit_tool.rs  file_read_tool.rs  file_search_tool.rs  file_write_tool.rs  memory_search_tool.rs  memory_write_tool.rs  ocr_tool.rs  pdf_file_read_tool.rs  pptx_file_read_tool.rs  read_file_tool.rs  shell_exec_tool.rs  text_file_edit_tool.rs  text_file_read_tool.rs  text_file_write_tool.rs  text_search_tool.rs  web_fetch_tool.rs  web_search_tool.rs
src/infrastructure/util/: path.rs  text.rs  url.rs
src/presentation/: cli.rs  command.rs  handler.rs
src/presentation/cli/: agent_cli.rs  chat_cli.rs  research_cli.rs  serve_cli.rs
src/presentation/command/: agent_command.rs
src/presentation/error/: agent_cli_error.rs
src/presentation/handler/: create_event_handler.rs  create_message_handler.rs  create_session_handler.rs  get_session_handler.rs  list_message_handler.rs  resolve_approval_handler.rs
src/presentation/state/: app_state.rs
src/presentation/util/: attachment.rs
