[package]
name = "work-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "commander"
path = "src/main.rs"

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.89"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1.129.0", features = ["behavior-version-latest"] }
aws-smithy-types = "1.4.7"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.10"
glob = "0.3.3"
html2text = "0.16.7"
ignore = "0.4.25"
indicatif = "0.17.11"
log = "0.4.29"
reedline = "0.47.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["http2", "multipart", "rustls"], default-features = false }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tavily = "2.1.0"
termimad = "0.34.1"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
