[package]
name = "commander"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "commander"
path = "src/main.rs"

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.89"
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1.130.0", features = ["behavior-version-latest"] }
aws-smithy-types = "1.4.7"
axum = "0.8.9"
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.10"
features = "0.10.0"
futures = "0.3.32"
glob = "0.3.3"
html2text = "0.17.1"
ignore = "0.4.25"
indicatif = "0.18.4"
log = "0.4.29"
pgvector = { version = "0.4.1", features = ["sqlx"] }
reedline = "0.47.0"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["http2", "json", "multipart", "rustls"], default-features = false }
rustyline = "18.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tavily = "2.1.0"
termimad = "0.34.1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tree-sitter = "0.26.8"
tree-sitter-bash = "0.25.1"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
